WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220820
[JSC] JSPromise should not propagate TerminatedExecutionError
https://bugs.webkit.org/show_bug.cgi?id=220820
Summary
[JSC] JSPromise should not propagate TerminatedExecutionError
Yusuke Suzuki
Reported
2021-01-21 13:11:26 PST
[JSC] JSPromise should not propagate TerminatedExecutionError
Attachments
Patch
(4.02 KB, patch)
2021-01-21 13:12 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(25.92 KB, patch)
2021-01-21 15:11 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-01-21 13:12:42 PST
Created
attachment 418077
[details]
Patch
Yusuke Suzuki
Comment 2
2021-01-21 13:12:45 PST
<
rdar://problem/72929399
>
Keith Miller
Comment 3
2021-01-21 13:13:53 PST
r=me
Yusuke Suzuki
Comment 4
2021-01-21 15:11:20 PST
Created
attachment 418091
[details]
Patch
Mark Lam
Comment 5
2021-01-21 15:21:10 PST
Comment on
attachment 418091
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418091&action=review
> Source/JavaScriptCore/API/JSAPIGlobalObject.mm:167 > + // FIXME: We could have error since any JS call can throw stack-overflow errors. > + //
https://bugs.webkit.org/show_bug.cgi?id=203402
> + promise->reject(globalObject, createError(globalObject, result.error()));
Shouldn't you only reject the promise if an exception actually exists?
Mark Lam
Comment 6
2021-01-21 15:33:00 PST
Comment on
attachment 418091
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418091&action=review
r=me
>> Source/JavaScriptCore/API/JSAPIGlobalObject.mm:167 >> + promise->reject(globalObject, createError(globalObject, result.error())); > > Shouldn't you only reject the promise if an exception actually exists?
Sorry, I misread this. Ignore me.
Yusuke Suzuki
Comment 7
2021-01-21 18:20:41 PST
Comment on
attachment 418091
[details]
Patch Thanks!
EWS
Comment 8
2021-01-21 18:51:32 PST
Committed
r271731
: <
https://trac.webkit.org/changeset/271731
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418091
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug