Source/JavaScriptCore/runtime/JSGlobalObjectFunctions.cpp
@@ -799,28 +799,30 @@ JSC_DEFINE_HOST_FUNCTION(globalFuncImportModule, (JSGlobalObject* globalObject, 
     auto* promise = JSPromise::create(vm, globalObject->promiseStructure());
 
     auto catchScope = DECLARE_CATCH_SCOPE(vm);
-    auto reject = [&] (JSValue rejectionReason) {
+
+    auto reject = [&](Exception* exception) {
+        if (UNLIKELY(isTerminatedExecutionException(vm, exception)))
+            return promise;
+        JSValue error = exception->value();
         catchScope.clearException();
-        promise->reject(globalObject, rejectionReason);
-        catchScope.clearException();
-        return JSValue::encode(promise);
+        promise->reject(globalObject, error);
+        return promise;
     };
 
     auto sourceOrigin = callFrame->callerSourceOrigin(vm);
     RELEASE_ASSERT(callFrame->argumentCount() == 1);
     auto* specifier = callFrame->uncheckedArgument(0).toString(globalObject);
     if (Exception* exception = catchScope.exception())
-        return reject(exception->value());
+        return JSValue::encode(reject(exception));
 
     // We always specify parameters as undefined. Once dynamic import() starts accepting fetching parameters,
     // we should retrieve this from the arguments.
     JSValue parameters = jsUndefined();
     auto* internalPromise = globalObject->moduleLoader()->importModule(globalObject, specifier, parameters, sourceOrigin);
     if (Exception* exception = catchScope.exception())
-        return reject(exception->value());
-    promise->resolve(globalObject, internalPromise);
+        return JSValue::encode(reject(exception));
 
-    catchScope.clearException();
+    promise->resolve(globalObject, internalPromise);
     return JSValue::encode(promise);
 }
 
