Source/JavaScriptCore/runtime/JSModuleLoader.cpp
@@ -120,6 +120,18 @@ static String printableModuleKey(JSGlobalObject* globalObject, JSValue key)
     return vm.propertyNames->emptyIdentifier.impl();
 }
 
+static JSInternalPromise* reject(JSGlobalObject* globalObject, CatchScope& catchScope, JSInternalPromise* promise)
+{
+    VM& vm = globalObject->vm();
+    Exception* exception = catchScope.exception();
+    ASSERT(exception);
+    if (UNLIKELY(isTerminatedExecutionException(vm, exception)))
+        return promise;
+    catchScope.clearException();
+    promise->reject(globalObject, exception->value());
+    return promise;
+}
+
 JSArray* JSModuleLoader::dependencyKeysIfEvaluated(JSGlobalObject* globalObject, JSValue key)
 {
     VM& vm = globalObject->vm();
@@ -244,24 +256,16 @@ JSInternalPromise* JSModuleLoader::importModule(JSGlobalObject* globalObject, JS
     dataLogLnIf(Options::dumpModuleLoadingState(), "Loader [import] ", printableModuleKey(globalObject, moduleName));
 
     VM& vm = globalObject->vm();
-    auto throwScope = DECLARE_THROW_SCOPE(vm);
+    auto catchScope = DECLARE_CATCH_SCOPE(vm);
 
     if (globalObject->globalObjectMethodTable()->moduleLoaderImportModule)
-        RELEASE_AND_RETURN(throwScope, globalObject->globalObjectMethodTable()->moduleLoaderImportModule(globalObject, this, moduleName, parameters, referrer));
+        return globalObject->globalObjectMethodTable()->moduleLoaderImportModule(globalObject, this, moduleName, parameters, referrer);
 
     auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
-
-    auto catchScope = DECLARE_CATCH_SCOPE(vm);
-    auto moduleNameString = moduleName->value(globalObject);
-    if (UNLIKELY(catchScope.exception())) {
-        JSValue error = catchScope.exception()->value();
-        catchScope.clearException();
-        promise->reject(globalObject, error);
-        catchScope.clearException();
-        return promise;
-    }
+    String moduleNameString = moduleName->value(globalObject);
+    if (UNLIKELY(catchScope.exception()))
+        return reject(globalObject, catchScope, promise);
     promise->reject(globalObject, createError(globalObject, makeString("Could not import the module '", moduleNameString, "'.")));
-    catchScope.clearException();
     return promise;
 }
 
@@ -277,21 +281,13 @@ Identifier JSModuleLoader::resolveSync(JSGlobalObject* globalObject, JSValue nam
 JSInternalPromise* JSModuleLoader::resolve(JSGlobalObject* globalObject, JSValue name, JSValue referrer, JSValue scriptFetcher)
 {
     VM& vm = globalObject->vm();
-
-    auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
-
     auto catchScope = DECLARE_CATCH_SCOPE(vm);
 
+    auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
     const Identifier moduleKey = resolveSync(globalObject, name, referrer, scriptFetcher);
-    if (UNLIKELY(catchScope.exception())) {
-        JSValue error = catchScope.exception()->value();
-        catchScope.clearException();
-        promise->reject(globalObject, error);
-        catchScope.clearException();
-        return promise;
-    }
+    if (UNLIKELY(catchScope.exception()))
+        return reject(globalObject, catchScope, promise);
     promise->resolve(globalObject, identifierToJSValue(vm, moduleKey));
-    catchScope.clearException();
     return promise;
 }
 
@@ -300,25 +296,16 @@ JSInternalPromise* JSModuleLoader::fetch(JSGlobalObject* globalObject, JSValue k
     dataLogLnIf(Options::dumpModuleLoadingState(), "Loader [fetch] ", printableModuleKey(globalObject, key));
 
     VM& vm = globalObject->vm();
-    auto throwScope = DECLARE_THROW_SCOPE(vm);
-
-    if (globalObject->globalObjectMethodTable()->moduleLoaderFetch)
-        RELEASE_AND_RETURN(throwScope, globalObject->globalObjectMethodTable()->moduleLoaderFetch(globalObject, this, key, parameters, scriptFetcher));
-
-    auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
-
     auto catchScope = DECLARE_CATCH_SCOPE(vm);
 
+    if (globalObject->globalObjectMethodTable()->moduleLoaderFetch)
+        return globalObject->globalObjectMethodTable()->moduleLoaderFetch(globalObject, this, key, parameters, scriptFetcher);
+
+    auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
     String moduleKey = key.toWTFString(globalObject);
-    if (UNLIKELY(catchScope.exception())) {
-        JSValue error = catchScope.exception()->value();
-        catchScope.clearException();
-        promise->reject(globalObject, error);
-        catchScope.clearException();
-        return promise;
-    }
+    if (UNLIKELY(catchScope.exception()))
+        return reject(globalObject, catchScope, promise);
     promise->reject(globalObject, createError(globalObject, makeString("Could not open the module '", moduleKey, "'.")));
-    catchScope.clearException();
     return promise;
 }
 
@@ -369,16 +356,15 @@ JSC_DEFINE_HOST_FUNCTION(moduleLoaderParseModule, (JSGlobalObject* globalObject,
     auto* promise = JSInternalPromise::create(vm, globalObject->internalPromiseStructure());
 
     auto catchScope = DECLARE_CATCH_SCOPE(vm);
-    auto reject = [&] (JSValue rejectionReason) {
-        catchScope.clearException();
-        promise->reject(globalObject, rejectionReason);
-        catchScope.clearException();
-        return JSValue::encode(promise);
+
+    auto rejectWithError = [&](JSValue error) {
+        promise->reject(globalObject, error);
+        return promise;
     };
 
     const Identifier moduleKey = callFrame->argument(0).toPropertyKey(globalObject);
     if (UNLIKELY(catchScope.exception()))
-        return reject(catchScope.exception()->value());
+        return JSValue::encode(reject(globalObject, catchScope, promise));
 
     JSValue source = callFrame->argument(1);
     auto* jsSourceCode = jsCast<JSSourceCode*>(source);
@@ -394,12 +380,12 @@ JSC_DEFINE_HOST_FUNCTION(moduleLoaderParseModule, (JSGlobalObject* globalObject,
         vm, sourceCode, Identifier(), JSParserBuiltinMode::NotBuiltin,
         JSParserStrictMode::Strict, JSParserScriptMode::Module, SourceParseMode::ModuleAnalyzeMode, SuperBinding::NotNeeded, error);
     if (error.isValid())
-        return reject(error.toErrorObject(globalObject, sourceCode));
+        return JSValue::encode(rejectWithError(error.toErrorObject(globalObject, sourceCode)));
     ASSERT(moduleProgramNode);
 
     ModuleAnalyzer moduleAnalyzer(globalObject, moduleKey, sourceCode, moduleProgramNode->varDeclarations(), moduleProgramNode->lexicalVariables());
     if (UNLIKELY(catchScope.exception()))
-        return reject(catchScope.exception()->value());
+        return JSValue::encode(reject(globalObject, catchScope, promise));
 
     promise->resolve(globalObject, moduleAnalyzer.analyze(*moduleProgramNode));
     catchScope.clearException();
